--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       background: transparent;
     }
 
+    /* Екран активації */
     #clickToStart {
       position: fixed;
       top: 0; left: 0;
@@ -46,6 +47,7 @@
       animation: bounce 1s infinite;
     }
 
+    /* Інструкція AR */
     #scanText {
       position: fixed;
       top: 50%;
@@ -64,6 +66,7 @@
       box-shadow: 0 0 20px rgba(255, 105, 180, 0.8);
     }
 
+    /* Жовта крапка */
     #centerYellowDot {
       position: fixed;
       top: 50%;
@@ -79,6 +82,23 @@
       opacity: 0.9;
     }
 
+    /* Кнопки */
+    .btn {
+      padding: 16px 32px;
+      border: none;
+      border-radius: 30px;
+      font-size: 1.3em;
+      font-weight: bold;
+      cursor: pointer;
+      box-shadow: 0 6px 12px rgba(0,0,0,0.4);
+      z-index: 10;
+      animation: popUp 0.5s forwards;
+    }
+    @keyframes popUp {
+      from { opacity: 0; transform: scale(0.8); }
+      to { opacity: 1; transform: scale(1); }
+    }
+
     #playVideoBtn {
       position: fixed;
       bottom: 100px;
@@ -86,17 +106,64 @@
       transform: translateX(-50%);
       background: #4CAF50;
       color: white;
-      padding: 16px 32px;
-      border-radius: 30px;
-      font-size: 1.3em;
-      font-weight: bold;
-      border: none;
-      z-index: 10;
-      box-shadow: 0 6px 12px rgba(0,0,0,0.4);
       display: none;
+    }
+
+    #startQuizBtn {
+      position: fixed;
+      bottom: 100px;
+      left: 50%;
+      transform: translateX(-50%);
+      background: #2196F3;
+      color: white;
+      display: none;
+    }
+
+    #restartBtn {
+      position: fixed;
+      bottom: 100px;
+      left: 50%;
+      transform: translateX(-50%);
+      background: #FF9800;
+      color: white;
+      display: none;
+    }
+
+    /* Вікторина */
+    #quizContainer {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(255, 255, 255, 0.95);
+      display: none;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      gap: 20px;
+      z-index: 100;
+      text-align: center;
+      padding: 20px;
+    }
+    #quizQuestion {
+      font-size: 1.6em;
+      color: #d10069;
+      font-weight: bold;
+    }
+    .quizOption {
+      width: 80%;
+      max-width: 300px;
+      padding: 15px;
+      font-size: 1.2em;
+      background: #ffd700;
+      color: #333;
+      border: none;
+      border-radius: 20px;
       cursor: pointer;
     }
 
+    /* Кнопка YouTube */
     #smartLessaBtn {
       position: fixed;
       bottom: 20px;
@@ -117,11 +184,6 @@
       0%, 100% { transform: translateY(0); }
       50% { transform: translateY(-10px); }
     }
-    @keyframes pulse {
-      0% { transform: translate(-50%, -50%) scale(1); }
-      50% { transform: translate(-50%, -50%) scale(1.1); }
-      100% { transform: translate(-50%, -50%) scale(1); }
-    }
   </style>
 </head>
 <body>
@@ -138,8 +200,10 @@
   <!-- Жовта крапка -->
   <div id="centerYellowDot"></div>
 
-  <!-- Кнопка запуску -->
-  <button id="playVideoBtn" onclick="playVideo()">▶️ Запустити відео</button>
+  <!-- Кнопки -->
+  <button id="playVideoBtn" class="btn" onclick="playVideo()">▶️ Запустити відео</button>
+  <button id="startQuizBtn" class="btn" onclick="showQuiz()">🎮 Грати у вікторину</button>
+  <button id="restartBtn" class="btn" onclick="restartAR()">🔄 Розпочати знову</button>
 
   <!-- AR Сцена -->
   <a-scene embedded arjs="sourceType: webcam; detectionMode: mono; trackingMethod: best;">
@@ -150,7 +214,6 @@
         position="0 0 0" 
         rotation="-90 0 0" 
         preload="none"
-        autoplay="false"
         muted="true">
       </a-video>
     </a-marker>
@@ -161,8 +224,14 @@
   <a href="https://youtube.com/playlist?list=PL6UDFwT9TzFxsVdFiEBsQ9yFpcYRPOpfO&si=IyXv1SkdPyvhcW7Z" 
      id="smartLessaBtn" target="_blank">👉 Дивись більше на @SmartLessa</a>
 
-  <!-- Звук -->
-  <audio id="successSound" src="https://cdn.pixabay.com/audio/2021/09/21/audio_2811f3692c.mp3" preload="auto"></audio>
+  <!-- Вікторина -->
+  <div id="quizContainer">
+    <div id="quizQuestion">Питання</div>
+    <button class="quizOption" id="opt1">Варіант 1</button>
+    <button class="quizOption" id="opt2">Варіант 2</button>
+    <button class="quizOption" id="opt3">Варіант 3</button>
+    <button class="btn" onclick="restartAR()">🔄 Повернутися до сканування</button>
+  </div>
 
   <script>
     const marker = document.getElementById('marker');
@@ -170,19 +239,72 @@
     const centerYellowDot = document.getElementById('centerYellowDot');
     const playVideoBtn = document.getElementById('playVideoBtn');
     const arVideo = document.getElementById('arVideo');
-    const successSound = document.getElementById('successSound');
     const clickToStart = document.getElementById('clickToStart');
+    const quizContainer = document.getElementById('quizContainer');
 
-    let canPlay = false; // Чи розблоковано гру
-    let isPlaying = false; // Чи відео відтворюється
+    let canPlay = false;
+    let isPlaying = false;
 
-    // --- Клік для активації ---
+    // --- Вікторина (оновлено: Говерла замість пісні) ---
+    const quiz = [
+      { q: "Яка столиця України?", o: ["Київ", "Львів", "Одеса"], c: 0 },
+      { q: "Який колір прапора України?", o: ["Червоно-чорний", "Синьо-жовтий", "Зелено-білий"], c: 1 },
+      { q: "Яка найвища гора в Україні?", o: ["Говерла", "Роман-Кош", "Піп Іван"], c: 0 }
+    ];
+    let quizIndex = 0;
+    let quizScore = 0;
+
+    function showQuiz() {
+      quizContainer.style.display = 'flex';
+      playVideoBtn.style.display = 'none';
+      startQuizBtn.style.display = 'none';
+      quizIndex = 0;
+      quizScore = 0;
+      nextQuizQuestion();
+    }
+
+    function nextQuizQuestion() {
+      if (quizIndex < quiz.length) {
+        const q = quiz[quizIndex];
+        document.getElementById('quizQuestion').textContent = q.q;
+        document.getElementById('opt1').textContent = q.o[0];
+        document.getElementById('opt2').textContent = q.o[1];
+        document.getElementById('opt3').textContent = q.o[2];
+
+        document.getElementById('opt1').onclick = () => checkAnswer(0);
+        document.getElementById('opt2').onclick = () => checkAnswer(1);
+        document.getElementById('opt3').onclick = () => checkAnswer(2);
+      } else {
+        showQuizResult();
+      }
+    }
+
+    function checkAnswer(selected) {
+      if (selected === quiz[quizIndex].c) quizScore++;
+      quizIndex++;
+      nextQuizQuestion();
+    }
+
+    function showQuizResult() {
+      const stars = '⭐'.repeat(quizScore);
+      document.getElementById('quizQuestion').innerHTML = 
+        `🎉 Вітаю!<br>Ти молодець!<br>Результат: ${quizScore}/3 ${stars}`;
+      document.getElementById('opt1').style.display = 'none';
+      document.getElementById('opt2').style.display = 'none';
+      document.getElementById('opt3').style.display = 'none';
+    }
+
+    // --- Події ---
+
     clickToStart.addEventListener('click', () => {
       clickToStart.style.display = 'none';
       canPlay = true;
     });
 
-    // --- Пропорції відео ---
+    // Гарантоване ініціалізаційне стан відео
+    arVideo.pause();
+    arVideo.loop = false;
+
     arVideo.addEventListener('loadedmetadata', () => {
       const videoWidth = arVideo.videoWidth;
       const videoHeight = arVideo.videoHeight;
@@ -193,61 +315,54 @@
       arVideo.setAttribute('height', height);
     });
 
-    // --- Подія: маркер знайдено ---
     marker.addEventListener('markerFound', () => {
       scanText.style.display = 'none';
       centerYellowDot.style.display = 'block';
-      
-      // Показуємо кнопку ТІЛЬКИ якщо відео не грає
-      if (!isPlaying && canPlay) {
+      if (!isPlaying && canPlay && quizContainer.style.display !== 'flex') {
         playVideoBtn.style.display = 'block';
       }
     });
 
-    // --- Подія: маркер втрачено ---
     marker.addEventListener('markerLost', () => {
       scanText.style.display = 'block';
       centerYellowDot.style.display = 'none';
       playVideoBtn.style.display = 'none';
-      if (!arVideo.ended) {
-        arVideo.pause();
-        isPlaying = false;
-      }
+      startQuizBtn.style.display = 'none';
+      arVideo.pause(); // Гарантована пауза
     });
 
-    // --- Відео закінчилося ---
     arVideo.addEventListener('ended', () => {
       isPlaying = false;
-      playVideoBtn.style.display = 'block'; // Показуємо кнопку "знову"
+      playVideoBtn.style.display = 'none';
+      startQuizBtn.style.display = 'block';
     });
 
-    // --- Функція запуску відео ---
     function playVideo() {
-      if (isPlaying) return; // Якщо вже грає — нічого не робимо
-
+      if (isPlaying) return;
       arVideo.currentTime = 0;
-      arVideo.play()
-        .then(() => {
-          isPlaying = true;
-          playVideoBtn.style.display = 'none';
-          successSound.currentTime = 0;
-          successSound.play().catch(() => {});
-        })
-        .catch(err => {
-          console.error("Не вдалося відтворити відео:", err);
-          alert("Будь ласка, натисни ще раз!");
-        });
+      arVideo.play().catch(err => {
+        console.warn("Не вдалося відтворити відео", err);
+        alert("Натисни ще раз!");
+      });
+      isPlaying = true;
     }
 
-    // --- Фікс висоти ---
+    function restartAR() {
+      quizContainer.style.display = 'none';
+      document.getElementById('opt1').style.display = 'block';
+      document.getElementById('opt2').style.display = 'block';
+      document.getElementById('opt3').style.display = 'block';
+      startQuizBtn.style.display = 'none';
+      scanText.style.display = 'block';
+    }
+
     function fixHeight() {
       document.body.style.height = window.innerHeight + 'px';
     }
     window.addEventListener('resize', fixHeight);
     fixHeight();
 
-    // --- Задня камера ---
-    AFRAME.utils.device.getCameraPermission = function () {
+    AFRAME.utils.device.getCameraPermission = () => {
       return navigator.mediaDevices.getUserMedia({
         video: { facingMode: 'environment' }
       });
@@ -255,4 +370,3 @@
   </script>
 </body>
 </html>
-
