--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
     function showQuizResult() {
       const stars = '⭐'.repeat(quizScore);
       document.getElementById('quizQuestion').innerHTML = 
-        `🎉 Вітаю!<br>Ти молодець!<br>Результат: ${quizScore}/3 ${stars}`;
+        `🎉 Вітаю!<br>Твій!<br>Результат: ${quizScore}/3 ${stars}`;
       document.getElementById('opt1').style.display = 'none';
       document.getElementById('opt2').style.display = 'none';
       document.getElementById('opt3').style.display = 'none';
@@ -406,3 +406,4 @@
   </script>
 </body>
 </html>
+
