--- a/index.html
+++ b/index.html
@@ -231,7 +231,159 @@
     font-size: 14px; border-radius: 10px;
   ">🔴 Тест: Відкрити вікторину</button>
 
-  <script>
+<!DOCTYPE html>
+<html lang="uk">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <title>AR Камера — Чарівне Пригодництво!</title>
+  <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
+  <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+  <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
+      touch-action: none;
+      font-family: 'Comic Sans MS', cursive, sans-serif;
+      background: transparent;
+    }
+    a-scene {
+      width: 100% !important;
+      height: 100% !important;
+      position: fixed;
+      top: 0;
+      left: 0;
+      background: transparent;
+    }
+
+    /* Інструкція перед скануванням */
+    #scanText {
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      color: #FF69B4;
+      font-size: 2em;
+      font-weight: bold;
+      text-shadow: 2px 2px 10px yellow, 0 0 10px #ff00ff;
+      z-index: 10;
+      text-align: center;
+      width: 90%;
+      animation: pulse 1.5s infinite;
+      background: rgba(255, 255, 0, 0.9);
+      padding: 15px;
+      border-radius: 20px;
+      box-shadow: 0 0 20px rgba(255, 105, 180, 0.8);
+    }
+    @keyframes pulse {
+      0% { transform: translate(-50%, -50%) scale(1); }
+      50% { transform: translate(-50%, -50%) scale(1.1); }
+      100% { transform: translate(-50%, -50%) scale(1); }
+    }
+
+    /* Маленька жовта крапка */
+    #centerYellowDot {
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 1px;
+      height: 1px;
+      background: #FFD700;
+      border-radius: 50%;
+      z-index: 10;
+      display: none;
+      box-shadow: 0 0 8px rgba(255, 215, 0, 0.6);
+      opacity: 0.9;
+      animation: glow 2s infinite alternate;
+    }
+    @keyframes glow {
+      from { box-shadow: 0 0 5px rgba(255, 215, 0, 0.5); }
+      to { box-shadow: 0 0 15px rgba(255, 215, 0, 0.8); }
+    }
+
+    /* Кнопка запуску відео */
+    #playVideoBtn {
+      position: fixed;
+      bottom: 100px;
+      left: 50%;
+      transform: translateX(-50%);
+      background: #4CAF50;
+      color: white;
+      padding: 16px 32px;
+      border-radius: 30px;
+      font-size: 1.3em;
+      font-weight: bold;
+      border: none;
+      z-index: 10;
+      box-shadow: 0 6px 12px rgba(0,0,0,0.4);
+      display: none;
+      cursor: pointer;
+      animation: popUp 0.5s forwards;
+    }
+    @keyframes popUp {
+      from { opacity: 0; transform: translateX(-50%) scale(0.8); }
+      to { opacity: 1; transform: translateX(-50%) scale(1); }
+    }
+
+    /* Кнопка SmartLessa */
+    #smartLessaBtn {
+      position: fixed;
+      bottom: 20px;
+      left: 50%;
+      transform: translateX(-50%);
+      background: linear-gradient(45deg, #ff0044, #ff6600);
+      color: white;
+      padding: 14px 24px;
+      border-radius: 30px;
+      font-size: 1.1em;
+      font-weight: bold;
+      text-decoration: none;
+      z-index: 10;
+      box-shadow: 0 6px 12px rgba(0,0,0,0.4);
+    }
+  </style>
+</head>
+<body>
+
+  <!-- Інструкція -->
+  <div id="scanText">🔍 Наведи на зображення!</div>
+
+  <!-- Жовта крапка -->
+  <div id="centerYellowDot"></div>
+
+  <!-- Кнопка запуску відео -->
+  <button id="playVideoBtn" onclick="playVideo()">▶️ Запустити відео</button>
+
+  <!-- AR Сцена -->
+  <a-scene embedded arjs="sourceType: webcam; detectionMode: mono; trackingMethod: best;">
+    <a-marker id="marker" type="pattern" url="marker.patt">
+      <a-video 
+        id="arVideo" 
+        src="ar-video.mp4" 
+        position="0 0 0" 
+        rotation="-90 0 0" 
+        preload="none"
+        autoplay="false"
+        muted="true">
+      </a-video>
+    </a-marker>
+    <a-entity camera></a-entity>
+  </a-scene>
+
+  <!-- Кнопка YouTube -->
+  <a href="https://youtube.com/playlist?list=PL6UDFwT9TzFxsVdFiEBsQ9yFpcYRPOpfO&si=IyXv1SkdPyvhcW7Z" 
+     id="smartLessaBtn" target="_blank">👉 Дивись більше на @SmartLessa</a>
+
+  <!-- Звуковий ефект -->
+  <audio id="successSound" src="https://cdn.pixabay.com/audio/2021/09/21/audio_2811f3692c.mp3" preload="auto"></audio>
+
+<script>
+  // Чекаємо, доки DOM повністю завантажиться
+  document.addEventListener('DOMContentLoaded', () => {
     const marker = document.getElementById('marker');
     const scanText = document.getElementById('scanText');
     const centerYellowDot = document.getElementById('centerYellowDot');
@@ -248,15 +400,15 @@
     const quiz = [
       { q: "Яка столиця України?", o: ["Київ", "Львів", "Одеса"], c: 0 },
       { q: "Який колір прапора України?", o: ["Червоно-чорний", "Синьо-жовтий", "Зелено-білий"], c: 1 },
-      { q: "Яка найвища гора в Україні?", o: ["Говерла", "Роман-Кош", "Піп Іван"], c: 0 }
+      { q: "Яка найвища гора в України?", o: ["Говерла", "Роман-Кош", "Піп Іван"], c: 0 }
     ];
     let quizIndex = 0;
     let quizScore = 0;
 
     function showQuiz() {
       console.log("🎮 Вікторина відкрита");
-      arVideo.pause();           // 🔒 Зупиняємо відео
-      arVideo.currentTime = 0;   // 🔁 Повертаємо на початок
+      arVideo.pause();
+      arVideo.currentTime = 0;
       isPlaying = false;
 
       quizContainer.style.display = 'flex';
@@ -293,21 +445,21 @@
     function showQuizResult() {
       const stars = '⭐'.repeat(quizScore);
       document.getElementById('quizQuestion').innerHTML = 
-        `🎉 Вітаю!<br>Твій!<br>Результат: ${quizScore}/3 ${stars}`;
+        `🎉 Вітаю!<br>Ти молодець!<br>Результат: ${quizScore}/3 ${stars}`;
       document.getElementById('opt1').style.display = 'none';
       document.getElementById('opt2').style.display = 'none';
       document.getElementById('opt3').style.display = 'none';
     }
 
-    // --- Події ---
-
+    // --- Екран активації ---
     clickToStart.addEventListener('click', () => {
       clickToStart.style.display = 'none';
       canPlay = true;
     });
 
+    // --- Відео: метадані завантажено ---
     arVideo.addEventListener('loadedmetadata', () => {
-      console.log("📽️ Відео метадані завантажено");
+      console.log("📽️ Відео завантажено");
       arVideo.pause();
 
       const videoWidth = arVideo.videoWidth;
@@ -319,6 +471,7 @@
       arVideo.setAttribute('height', height);
     });
 
+    // --- Маркер знайдено ---
     marker.addEventListener('markerFound', () => {
       scanText.style.display = 'none';
       centerYellowDot.style.display = 'block';
@@ -327,12 +480,13 @@
       }
     });
 
+    // --- Маркер втрачено ---
     marker.addEventListener('markerLost', () => {
       scanText.style.display = 'block';
       centerYellowDot.style.display = 'none';
       playVideoBtn.style.display = 'none';
       startQuizBtn.style.display = 'none';
-      arVideo.pause();           // ✅ Вже було — залишаємо
+      arVideo.pause();
       arVideo.currentTime = 0;
       isPlaying = false;
     });
@@ -345,34 +499,56 @@
       startQuizBtn.style.display = 'block';
     });
 
-    // --- Запуск відео ---
+    // --- 🔴 ГАРАНТОВАНИЙ ЗАПУСК ВІДЕО ---
     function playVideo() {
-      if (isPlaying) return;
+      console.log("▶️ Кнопка 'Запустити відео' натиснута");
+
+      if (isPlaying) {
+        console.log("⏸️ Відео вже грає");
+        return;
+      }
 
       arVideo.currentTime = 0;
-      arVideo.play().then(() => {
-        console.log("▶️ Відео запущено");
-        isPlaying = true;
 
-        // 🔒 Страховка: через 19 секунд — вікторина
-        setTimeout(() => {
-          if (isPlaying) {
-            console.log("⏰ Страховка: вікторина через 19 сек");
-            arVideo.pause();
-            isPlaying = false;
-            playVideoBtn.style.display = 'none';
-            startQuizBtn.style.display = 'block';
-          }
-        }, 19000);
+      // Пробуємо запустити
+      const playPromise = arVideo.play();
 
-      }).catch(err => {
-        console.error("❌ Не вдалося відтворити відео:", err);
-        alert("Не вдалося запустити відео. Натисни ще раз.");
-      });
+      if (playPromise !== undefined) {
+        playPromise.then(() => {
+          console.log("✅ Відео успішно запущено");
+          isPlaying = true;
+          playVideoBtn.style.display = 'none';
+
+          // Страховка: через 19 сек — вікторина
+          setTimeout(() => {
+            if (isPlaying && !arVideo.ended) {
+              console.log("⏰ Страховка: вікторина через 19 сек");
+              arVideo.pause();
+              isPlaying = false;
+              startQuizBtn.style.display = 'block';
+            }
+          }, 19000);
+
+        }).catch(err => {
+          console.error("❌ Не вдалося запустити відео:", err);
+          alert("❌ Не вдалося запустити відео. Натисни ще раз. Переконайся, що відео ar-video.mp4 завантажено.");
+        });
+      }
     }
 
-    // --- Повернення до AR ---
-    function restartAR() {
+    // --- Прив’язуємо кнопку після DOM ---
+    if (playVideoBtn) {
+      playVideoBtn.onclick = playVideo;
+    } else {
+      console.error("❌ Кнопка playVideoBtn не знайдена");
+    }
+
+    if (startQuizBtn) {
+      startQuizBtn.onclick = showQuiz;
+    }
+
+    // --- Повернення ---
+    window.restartAR = function() {
       arVideo.pause();
       arVideo.currentTime = 0;
       isPlaying = false;
@@ -383,7 +559,7 @@
       document.getElementById('opt3').style.display = 'block';
       startQuizBtn.style.display = 'none';
       scanText.style.display = 'block';
-    }
+    };
 
     // --- Фікс висоти ---
     function fixHeight() {
@@ -399,11 +575,20 @@
       });
     };
 
-    // --- Логування для діагностики ---
+    // --- Логування ---
     arVideo.addEventListener('play', () => console.log("▶️ play"));
     arVideo.addEventListener('pause', () => console.log("⏸️ pause"));
-    arVideo.addEventListener('error', e => console.error("❌ error:", e));
-  </script>
+    arVideo.addEventListener('error', e => console.error("❌ video error:", e));
+    arVideo.addEventListener('canplay', () => console.log("✅ canplay: відео готове"));
+    arVideo.addEventListener('waiting', () => console.log("🟡 waiting: відео завантажується"));
+  });
+</script>
 </body>
 </html>
+
+
+
+</body>
+</html>
+
 
